<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomePage" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="52dp"
            android:fontFamily="@font/playfair_display_bold"
            android:text="@string/welcome"
            android:textColor="#032D23"
            android:textSize="30dp" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:fontFamily="@font/playfair_display_bold"
            android:text="@string/app_name"
            android:textColor="#C4C4C4"
            android:textSize="30dp" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="111dp"
            android:layout_marginRight="40dp"
            android:fontFamily="@font/playfair_display_bold"
            android:text="@string/login"
            android:textColor="#000000"
            android:textSize="48dp" />

        <EditText
            android:id="@+id/editTextTextPersonName9"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="39dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/border"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:paddingLeft="20dp" />

        <EditText
            android:id="@+id/editTextTextPersonName10"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/border"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPersonName"
            android:paddingLeft="20dp" />

        <Button
            android:id="@+id/button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="250dp"
            android:text="@string/forget"
            android:textColor="#090909"
            android:textSize="10dp" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:backgroundTint="#032D23"
            android:text="@string/LOGIN" />
    </LinearLayout>

</RelativeLayout>