<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:isScrollContainer="false"
        >

        <RelativeLayout
            android:id="@+id/relativelayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <View
                android:id="@+id/view"
                android:layout_width="wrap_content"
                android:layout_height="98dp"
                android:background="@color/blue"
                />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="15dp"
                android:background="@drawable/border"
                android:backgroundTint="@color/silver"
                app:cardCornerRadius="5sp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/pickuppoint"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginBottom="5dp"
                        android:background="@drawable/border"
                        android:drawableStart="@drawable/location"
                        android:drawablePadding="10sp"
                        android:drawableTint="@color/black"
                        android:ems="10"
                        android:hint="Enter Pickup Point"
                        android:inputType="textPersonName"
                        android:padding="15sp"
                        android:paddingStart="10sp"
                        tools:layout_editor_absoluteX="3dp"
                        tools:layout_editor_absoluteY="100dp" />

                    <EditText
                        android:id="@+id/droppoint"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginEnd="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/border"
                        android:drawableStart="@drawable/location2"
                        android:drawablePadding="10sp"
                        android:drawableTint="@color/black"
                        android:ems="10"
                        android:hint="Enter Drop Point"
                        android:inputType="textPersonName"
                        android:padding="15sp"
                        android:paddingStart="10sp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/cardView"
                android:layout_marginTop="10dp"
                android:background="@drawable/greybg"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/filldetails"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="35sp"
                    android:layout_marginTop="23sp"
                    android:fontFamily="@font/roboto"
                    android:text="Please fill the details given below"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/pickupaddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30sp"
                    android:layout_marginTop="14sp"
                    android:layout_marginEnd="30sp"
                    android:background="@drawable/border"
                    android:ems="10"
                    android:hint="@string/Address"
                    android:inputType="textPersonName"
                    android:padding="18sp" />

                <EditText
                    android:id="@+id/dropaddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30sp"
                    android:layout_marginTop="8sp"
                    android:layout_marginEnd="30sp"
                    android:background="@drawable/border"
                    android:ems="10"
                    android:hint="@string/Address2"
                    android:inputType="textPersonName"
                    android:padding="18sp" />


                <EditText
                    android:id="@+id/pickuppincode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30sp"
                    android:layout_marginTop="8sp"
                    android:layout_marginEnd="30dp"
                    android:background="@drawable/border"
                    android:ems="10"
                    android:hint="@string/Pincode"
                    android:inputType="number"
                    android:padding="18sp" />

                <EditText
                    android:id="@+id/droppincode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30sp"
                    android:layout_marginTop="8sp"
                    android:layout_marginEnd="30sp"
                    android:layout_weight="1"
                    android:background="@drawable/border"
                    android:ems="10"
                    android:hint="@string/Pincode2"
                    android:inputType="number"
                    android:padding="18sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/weight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:layout_marginTop="8dp"
                        android:layout_weight="1"
                        android:background="@drawable/border"
                        android:hint="@string/weight"
                        android:inputType="number"
                        android:padding="18dp" />

                    <EditText
                        android:id="@+id/date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="30dp"
                        android:layout_weight="1"
                        android:background="@drawable/border"
                        android:drawableRight="@drawable/calender"
                        android:drawableTint="@color/black"
                        android:hint="@string/date"
                        android:inputType="date"
                        android:padding="18dp" />
                </LinearLayout>

                <EditText
                    android:id="@+id/mobilenoinhomepage2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="30dp"
                    android:background="@drawable/border"
                    android:hint="@string/mobileno"
                    android:inputType="number"
                    android:padding="18dp" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/Offer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:layout_marginTop="8dp"
                        android:layout_weight="1"
                        android:background="@drawable/border"
                        android:hint="Apply Offer"
                        android:inputType="textPersonName"
                        android:padding="18dp" />

                    <Button
                        android:id="@+id/applybtn"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="30dp"
                        android:backgroundTint="@color/black"
                        android:text="Apply" />
                </LinearLayout>

                <TextView
                    android:id="@+id/appliedoffer"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="23sp"
                    android:background="@color/gray"
                    android:drawableEnd="@drawable/close"
                    android:drawableTint="@color/black"
                    android:fontFamily="@font/work_sans"
                    android:padding="10dp"
                    android:text=""
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:visibility="gone" />

                <EditText
                    android:id="@+id/km"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30sp"
                    android:layout_marginTop="8sp"
                    android:layout_marginEnd="30sp"
                    android:layout_weight="1"
                    android:background="@drawable/border"
                    android:ems="10"
                    android:hint="Enter Kilometer"
                    android:inputType="number"
                    android:padding="18sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/border"
                        android:padding="20dp"
                        android:text="Estimated Cost :"
                        android:textColor="@color/black"
                        android:textSize="20dp" />

                    <TextView
                        android:id="@+id/estPrice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="30dp"
                        android:layout_weight="1"
                        android:background="@drawable/border"
                        android:padding="15dp"
                        android:text=""
                        android:textColor="@color/black"
                        android:textSize="20dp" />
                </LinearLayout>

                <Button
                    android:id="@+id/getEstPriceBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="30dp"
                    android:backgroundTint="@color/lightBlack"
                    android:padding="20dp"
                    android:text="Get Estimated Price" />

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    app:cardCornerRadius="30dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView10"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="35sp"
                            android:layout_marginTop="15dp"
                            android:layout_marginBottom="5dp"
                            android:fontFamily="@font/roboto"
                            android:text="Select Payment Method"
                            android:textColor="#000000"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <RadioGroup
                            android:id="@+id/radioGroup"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <RadioButton
                                android:id="@+id/paytm"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="30dp"
                                android:drawableLeft="@drawable/paytm"
                                android:drawablePadding="20dp"
                                android:padding="10dp"
                                android:text="(Will be Available in Future)" />

                            <RadioButton
                                android:id="@+id/phonepe"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="30dp"
                                android:drawableLeft="@drawable/phonepe"
                                android:drawablePadding="20dp"
                                android:padding="10dp"
                                android:text="(Will be Available in Future)" />

                            <RadioButton
                                android:id="@+id/cod"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="30dp"
                                android:padding="10dp"
                                android:text="Cash On Delivery"

                                />
                        </RadioGroup>
                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <Button
                    android:id="@+id/continuebtninhomepage2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="30dp"
                    android:backgroundTint="@color/blue"
                    android:padding="18dp"
                    android:text="Continue"
                    android:textColor="@color/white" />

            </LinearLayout>


        </RelativeLayout>


    </ScrollView>


</LinearLayout>